--- a/FlightParser.ipynb
+++ b/FlightParser.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import json\n"
+    "import json"
    ]
   },
   {
@@ -62,8 +62,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
